[tool.poetry]
name = "epsilon-grapher"
version = "0.1.0"
description = ""
authors = ["Reyn Alpha <reynalpha@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
